finished with step 8

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
 
     <title>!Survey</title>
     <meta name="description" content="Survey form powered by Flask" />
-    <!-- <link rel="stylesheet" href="css/styles.css?v=1.0"> -->
+    <link rel="stylesheet" href="static/styles.css" />
   </head>
   <body>
     <h1>{% block title %}{% endblock %}</h1>
