--- a/templates/thanks.html
+++ b/templates/thanks.html
@@ -4,5 +4,12 @@
 {% block title %}Thank you!{% endblock %}
 <!--  -->
 {% block content %}
-<p>We really appreciate your time and feedback.</p>
+<!--  -->
+{% for msg in get_flashed_messages() %}
+<p>{{ msg }}</p>
+{% endfor %}
+
+<p>
+  Your response has been recorded and we appreciate your time and feedback.
+</p>
 {% endblock %}
