--- a/templates/instructions.html
+++ b/templates/instructions.html
@@ -5,7 +5,7 @@
 <!--  -->
 {% block content %}
 <p>{{instructions}}</p>
-<form action="questions/0">
+<form action="questions/0" method="POST">
   <button>Let's Start!</button>
 </form>
 {% endblock %}
